Moved header into home component, fixed issue with disalignment between title and theme toggle button

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -32,5 +32,11 @@
         top: 1.4rem;
         right: 15px;
     }
+}
+
+@media screen and (max-width: 350px) {
+    .theme-toggle {
+        top: 1.1rem;
+    }
 
 }
